# slayer

./: .env.example  .gitignore  .vercelignore  BENCHMARK_RUNNER_DESIGN.md  BIELIK_RECIPE_NOTES.md  CONTRIBUTING.md  DATASET_MANIFEST.md  DATA_LINEAGE.md  README.md  V3_DATA_AUDIT.md  V3_DATA_PLAN.md  V3_DISTILL_SCENARIO.md  V3_PROPOSAL.md  benchmarks.html  bielik-dane.html  datasety.html  eksperymenty.html  index.html  kierunki.html  leaderboard.html  llmzszl_eval.py  next.config.mjs  node_modules  package-lock.json  package.json  plan.md  poquad_eval.py  poquad_judge.py  progress.html  propozycja.html  pyproject.toml  roadmap.html  styl.html  team.html  trening.html  v3.html  wiedza.html  zadania.html  zespol.html
app/: home-live.jsx  layout.jsx  page.jsx
assets/: lab.css  site.js
bench/: HELDOUT.md  POLNATIVE.md  _bench_common.py  bench_flores.py  bench_gsm8k.py  bench_mcq.py  bench_poquad.py  build_style_demo.py  build_v3_mix.py  build_v3_sources.py  check_mcq_loaders.py  compare.py  dataset_manifest.json  decon_audit.py  decon_neardup.py  entigraph_augment.py  entigraph_hops.py  gen_distill_pl.py  gen_mcq.py  harvest_wiki_sources.py  heldout_check.py  ingest_zpe.py  knowledge_probe.py  make_dashboard.py  make_style_disjoint.py  mtbench_pl.py  plot_matrix_runner.py  polnative_eval.py  polnative_leaderboard.py  polnative_report.py  polnative_strategy.py  publish.sh  shard_jsonl.py  spotcheck_entigraph.py  status.py  test_check_mcq_loaders.py  test_decon_neardup.py  tokenizer_fertility.py  verify_external_sft.py  verify_probe_golds.py
components/: Footer.jsx  Nav.jsx  (+1 more)
(+198 files in other folders)
